# conversational-markdown-format

./: Cargo.toml
docs/: index.html
examples/: simple.cmf
src/: lib.rs  terminal_renderer.rs
